// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb render testing > Test Breadcrumb (Snapshot) 1 1`] = `
<div>
  <div
    class="msg container fixedScrollbar breadcrumb dropShadow"
    id="breadcrumb1"
    style="flex-direction: row;"
  >
    <div
      class="msg button breadcrumbItem"
      id="root"
      role="button"
      tabindex="0"
    >
      Root
    </div>
    <div
      class="msg button breadcrumbItem"
      id="folder"
      role="button"
      tabindex="0"
    >
      Folder
    </div>
    <div
      class="msg button breadcrumbItem selected"
      id="subfolder"
      role="button"
      tabindex="0"
    >
      Subfolder
    </div>
  </div>
</div>
`;

exports[`Breadcrumb render testing > Test Breadcrumb (Snapshot) 2 1`] = `
<div>
  <div
    class="msg container fixedScrollbar breadcrumb"
    id="breadcrumb2"
    style="flex-direction: row;"
  >
    <div
      class="msg button breadcrumbItem"
      id="root"
      role="button"
      tabindex="0"
    >
      Root
    </div>
    <label
      class="msg label separator"
      data-tooltip="expand"
    >
      ☞
    </label>
    <div
      class="msg button breadcrumbItem"
      id="folder"
      role="button"
      tabindex="0"
    >
      Folder
    </div>
    <label
      class="msg label separator"
      data-tooltip="expand"
    >
      ☞
    </label>
    <div
      class="msg button breadcrumbItem selected"
      id="subfolder"
      role="button"
      tabindex="0"
    >
      Subfolder
    </div>
    <label
      class="msg label separator"
      data-tooltip="expand"
    >
      ☞
    </label>
    <div
      class="msg button breadcrumbItem"
      id="subfolder2"
      role="button"
      tabindex="0"
    >
      Subfolder 2
    </div>
    <label
      class="msg label separator"
      data-tooltip="expand"
    >
      ☞
    </label>
  </div>
</div>
`;

exports[`Breadcrumb render testing > Test Breadcrumb (Snapshot) 3 1`] = `
<div>
  <div
    class="msg container fixedScrollbar breadcrumb"
    id="breadcrumb3"
    style="flex-direction: row;"
  >
    <div
      class="msg button"
      role="button"
      style="background-color: white; color: white;"
      tabindex="0"
    >
      <span
        style="color: rgb(0, 117, 143);"
      >
        My
      </span>
      <span
        style="color: rgb(242, 145, 17);"
      >
        SQL
      </span>
    </div>
    <div
      class="msg button"
      role="button"
      style="background-color: rgb(80, 80, 80);"
      tabindex="0"
    >
      <label
        class="msg label"
        data-tooltip="expand"
      >
        localhost:3307
      </label>
    </div>
    <div
      caption="mysql"
      class="msg button"
      role="button"
      style="background-color: gray;"
      tabindex="0"
    >
      mysql
    </div>
    <div
      caption="SQL"
      class="msg button"
      role="button"
      style="background-color: darkorange; color: white;"
      tabindex="0"
    >
      SQL
    </div>
  </div>
</div>
`;
